--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "netlify deploy --prod"
+    "start": "SET NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+    "build": "SET NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "netlify-lambda": "^2.0.16",
-    "nodemon": "^2.0.22",
     "serverless-http": "^3.2.0"
   }
 }
