--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1"
   }
 }
